[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/m6size4.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/ButtonStyleBase2.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/ButtonStyleDisabled2.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/ButtonStyleHover2.tres" type="StyleBox" id=4]
[ext_resource path="res://ui/ButtonStylePressed2.tres" type="StyleBox" id=5]
[ext_resource path="res://ui/screens/gameover.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart_game"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 382.0
margin_top = 196.0
margin_right = 642.0
margin_bottom = 404.0

[node name="GameOverTitle" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 260.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 1 )
text = "Game Over"

[node name="PlayAgain" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 260.0
margin_bottom = 132.0
rect_min_size = Vector2( 260, 72 )
focus_mode = 0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Play Again"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 260.0
margin_bottom = 208.0
rect_min_size = Vector2( 260, 72 )
focus_mode = 0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Quit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
